
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2008 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd HEAD

  - Add IPv6 support.
  - Install a LaunchDaemon script to start/stop ngIRCd on Mac OS X.
  - Implemented IRC commands INFO, SUMMON (dummy), and USERS (dummy) and
    enhanced test suite to check these commands. (Dana Dahlstrom)
  - RPL_WHOREPLY messages generated by IRC_WHO didn't include flags (*,@,+).
    (Dana Dahlstrom)
  - IRC_WHO now supports search patterns and will test this
    against user nickname/servername/hostname, etc. as required by
    RFC 2812, Section 3.6.1. (reported by Dana Dahlstrom)
  - Add test cases for "WHO" command. (Dana Dahlstrom)
  - Implement RFC 2812 handling of "0" argument to 'JOIN': must be treated
    as if the user had sent PART commands for all channels the user is a
    member of. (Dana Dahlstrom)
  - Allow NOTICEs to be sent to a channel. (Fabian Schlager)

ngIRCd 0.11.1 (2008-02-26)

  - Fix sending of JOIN commands between servers when remote server appended
    mode flags. (Rolf Eike Beer) [from HEAD]
  - Send "G" instead of "H" flag in WHO replies. (reported by Dana Dahlstrom)
  - Under some circumstances ngIRCd issued channel MODE message with a
    trailing space. (Dana Dahlstrom) [from HEAD]

ngIRCd 0.11.0 (2008-01-15)

  ngIRCd 0.11.0-pre2 (2008-01-07)
  - SECURITY: IRC_PART could reference invalid memory, causing
    ngircd to crash [from HEAD].
  
  ngIRCd 0.11.0-pre1 (2008-01-02)
  - Use dotted-decimal IP address if hostname is >= 64.
  - Add support for /STAT u (server uptime) command.
  - New [Server] configuration Option "Bind" allows to specify
    the source ip adress to use when connecting to remote server.