@@ -12,6 +12,7 @@
 
 ngIRCd HEAD
 
+  - Do not exit on SIGHUP or /REHASH if the config file cannot opened.
   - Add IPv6 support.
   - Install a LaunchDaemon script to start/stop ngIRCd on Mac OS X.
   - Implemented IRC commands INFO, SUMMON (dummy), and USERS (dummy) and
@@ -759,4 +760,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.344 2008/02/26 22:05:42 fw Exp $
+$Id: ChangeLog,v 1.345 2008/03/18 20:12:47 fw Exp $
